[tool.poetry]
name = "repl_python3_Connect-44444444444444444"
version = "0.1.0"
description = ""
authors = ["DanielGonz123 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
